# LEGO1Decompile

./: CMakeLists.txt  README.md  appveyor-build.bat  appveyor.yml
db/: ISLE.EXE.dd32
src/: LEGO1.DEF  legoanimationmanager.h  legobuildingmanager.h  legoentity.h  legoinputmanager.h  legoomni.h  legopartpresenter.h  legopathboundary.h  legoroi.h  legovideomanager.h  main.cpp  makesourcename.h  mxatomid.h  mxbackgroundaudiomanager.h  mxbitmap.h  mxcore.cpp  mxcore.h  mxcriticalsection.h  mxdsaction.h  mxdsfile.h  mxomni.h  mxomnicreateparam.h  mxpalette.h  mxrect32.h  mxsoundmanager.h  mxstreamcontroller.h  mxstreamer.h  mxstring.h  mxticklemanager.h  mxtimer.h  mxtransitionmanager.h  mxvariable.h  mxvideoparam.h  nocd.h  realtimeview.h  viewroi.h
src/custom/: debug.cpp  debug.h
src/lego/: legoanimationmanager.cpp  legoanimationmanager.h  legobackgroundcolor.cpp  legobackgroundcolor.h  legobuildingmanager.cpp  legobuildingmanager.h  legoentity.cpp  legoentity.h  legogamestate.cpp  legogamestate.h  legoinputmanager.cpp  legoinputmanager.h  legomodelpresenter.cpp  legomodelpresenter.h  legonavcontroller.cpp  legonavcontroller.h  legoobjectfactory.cpp  legoobjectfactory.h  legoomni.cpp  legoomni.h  legopartpresenter.cpp  legopartpresenter.h  legopathboundary.h  legoroi.cpp  legoroi.h  legoscripts.cpp  legoscripts.h  legosoundmanager.cpp  legosoundmanager.h  legovideomanager.cpp  legovideomanager.h  legoworld.cpp  legoworld.h  legoworldpresenter.cpp  legoworldpresenter.h
src/mx/: mxatom.cpp  mxatom.h  mxatomid.cpp  mxatomid.h  mxatommanager.cpp  mxatommanager.h  mxatomtable.cpp  mxatomtable.h  mxbackgroundaudiomanager.cpp  mxbackgroundaudiomanager.h  mxbitmap.cpp  mxbitmap.h  mxbool.h  mxcore.cpp  mxcore.h  mxcriticalsection.cpp  mxcriticalsection.h  mxdirectdraw.cpp  mxdirectdraw.h  mxdsaction.cpp  mxdsaction.h  mxdsfile.cpp  mxdsfile.h  mxdsobject.cpp  mxdsobject.h  mxeventmanager.h  mxioinfo.cpp  mxioinfo.h  mxmidipresenter.cpp  mxmidipresenter.h  mxmusicmanager.h  mxnotificationmanager.cpp  mxnotificationmanager.h  mxobjectfactory.cpp  mxobjectfactory.h  mxomni.cpp  mxomni.h  mxomnicreateflags.cpp  mxomnicreateflags.h  mxomnicreateparam.cpp  (+35 more)
src/other/: makesourcename.cpp  makesourcename.h  nocd.cpp  nocd.h  realtimeview.cpp  realtimeview.h  viewmanager.cpp  viewmanager.h  viewroi.h
src/unknown/: legounknownmanager2.cpp  legounknownmanager2.h  legounknownmanager3.cpp  legounknownmanager3.h  legounknownmanager4.cpp  legounknownmanager4.h  legounknownmanager8.cpp  legounknownmanager8.h  mxunknownmanager4.cpp  mxunknownmanager4.h  mxunknownmanager5.cpp  mxunknownmanager5.h  mxunknownmanager6.cpp  mxunknownmanager6.h
